# rocket_opencv

./: Cargo.toml  README.md  Rocket.toml  build.rs  icon.png.base64  image.png.base64  image_new.base64
src/: main.rs
