[package]
name = "rocket-opencv"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
opencv = { version = "0.62.0", default-features = false, features = [ "imgcodecs" , "imgproc"] }
rocket = "0.5.0-rc.1"
